--- a/user.html
+++ b/user.html
@@ -8,13 +8,13 @@
     <title>SmartBin</title>
     <link rel="stylesheet" href="userStyle.css" />
     <script src="https://kit.fontawesome.com/40f7982ca7.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="thaparlogo.png" type="image/x-icon" />
+    <link rel="icon" href="smartbinrednobg.png" type="image/x-icon" />
   </head>
   <body>
     <div id="header">
       <div class="container">
         <nav>
-          <img src="thaparlogo.png" class="logo" />
+          <img src="smartbinrednobg.png" class="logo" />
           <ul id="sidemenu">
             <li><a href="#header">Home</a></li>
             <li><a href="#about">About</a></li>
